Lisätty projektille oma sivu ja tarkempi kuvaus

--- a/about.html
+++ b/about.html
@@ -24,7 +24,8 @@
         <li>
           <h1>
             <a href="index.html"
-              ><span class="fas fa-code" aria-hidden="true"></span> Olli Mikkonen</a
+              ><span class="fas fa-code" aria-hidden="true"></span> Olli
+              Mikkonen</a
             >
           </h1>
         </li>
@@ -32,8 +33,7 @@
         <li><a href="about.html">Minusta</a></li>
         <li><a href="index.html#contact">Ota yhteyttä</a></li>
         <li>
-            <a href="https://www.linkedin.com/in/mikkonenolli/" target="_blank"
-            >
+          <a href="https://www.linkedin.com/in/mikkonenolli/" target="_blank">
             <span class="fab fa-linkedin" aria-hidden="true"></span>
             <span class="sr-only">LinkedIn</span>
           </a>
@@ -46,7 +46,7 @@
         </li>
         <li>
           <a
-            href="https://www.dropbox.com/s/e8rjwdybb3j5q65/ollimikkonen_cv.pdf?dl=0"
+            href="https://www.dropbox.com/s/1yx0ay8o86e56e2/ollimikkonen_cv.png?dl=0"
             target="_blank"
             class="button"
             >Ansioluettelo</a
@@ -61,36 +61,40 @@
         <article>
           <div class="text">
             <h3>Tietoa minusta</h3>
-            <p class="blackbox">
-                Olen 29-vuotias ja opiskelen tradenomiksi tietojenkäsittelyn tutkinto-ohjelmassa. En ole vielä ammattilainen, mutta olen nopea oppimaan ja motivoitunut kehittymään kohti IT-alan ammattilaisuutta. Luonteeltani olen positiivinen ja rauhallinen kaveri, joka osaa ottaa toiset huomioon. Toimin hyvin yhteen muiden kanssa, mutta nautin myös itsenäisestä työskentelystä.
-                Olen kiinnostunut kasvattamaan osaamistani ohjelmistokehityksessä sekä ohjelmistotestauksessa.
-            </p>
-            <h4>Taidot:</h4>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>Wordpress</li>
-              <li>Mysql</li>
-              <li>React Native</li>
-              <li>PHP</li>
-              <li>Scrum</li>
-            </ul>
+            <div class="blackbox">
+              <p>
+                Olen 30-vuotias ja opiskelen tradenomiksi tietojenkäsittelyn
+                tutkinto-ohjelmassa. En ole vielä ammattilainen, mutta olen
+                nopea oppimaan ja motivoitunut kehittymään kohti IT-alan
+                ammattilaisuutta. Luonteeltani olen positiivinen ja rauhallinen
+                kaveri, joka osaa ottaa toiset huomioon. Toimin hyvin yhteen
+                muiden kanssa, mutta nautin myös itsenäisestä työskentelystä.
+                Olen kiinnostunut kasvattamaan osaamistani
+                ohjelmistokehityksessä sekä ohjelmistotestauksessa.
+              </p>
+              <h4>Taidot:</h4>
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Wordpress</li>
+                <li>Mysql</li>
+                <li>React Native</li>
+                <li>PHP</li>
+                <li>Scrum</li>
+              </ul>
+            </div>
           </div>
-          <img
-            src="img/profilepic.jpeg"
-            alt="Olli Mikkonen"
-          />
+          <img src="img/profilepic.jpeg" alt="Olli Mikkonen" />
         </article>
       </section>
     </div>
     <div class="gradient"></div>
     <footer>
-      <h2>Olli Mikkonen &middot; Opiskelija</h2>
+      <h2>Olli Mikkonen &middot; Tietojenkäsittelyn opiskelija</h2>
       <ul>
         <li>
-            <a href="https://www.linkedin.com/in/mikkonenolli/" target="_blank"
-            >
+          <a href="https://www.linkedin.com/in/mikkonenolli/" target="_blank">
             <span class="fab fa-linkedin" aria-hidden="true"></span>
             <span class="sr-only">LinkedIn</span>
           </a>
