--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </li>
         <li>
           <a
-            href="https://www.dropbox.com/s/e8rjwdybb3j5q65/ollimikkonen_cv.pdf?dl=0"
+            href="https://www.dropbox.com/s/1yx0ay8o86e56e2/ollimikkonen_cv.png?dl=0"
             target="_blank"
             class="button"
             >Ansioluettelo</a
@@ -82,49 +82,60 @@
         <article>
           <div class="text">
             <h4>Kouluprojekti</h4>
-            <h3>Cash Tracker</h3>
-            <p class="blackbox">
-              Kouluprojekti, jossa lähdimme viiden hengen tiimin kanssa
-              suunnittelemaan ja kehittämään budjetointisovellusta mobiiliin.
-              Projektissa valitsimme käytettäväksi React Nativen ja minun
-              vastuullani projektissa oli frontend yhdessä tiimimme toisten
-              kehittäjien kanssa sekä olin vastuussa myös testaamisesta.
-            </p>
-            <h4>Käytettyjä teknologioita ja menetelmiä:</h4>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>React Native</li>
-              <li>Scrum</li>
-              <li>Git</li>
-            </ul>
+            <a href="cashtracker.html">
+              <h3>Cash Tracker</h3>
+            </a>
+            <div class="blackbox">
+              <p>
+                Kouluprojekti, jossa lähdimme viiden hengen tiimin kanssa
+                suunnittelemaan ja kehittämään budjetointisovellusta mobiiliin.
+                Projektissa valitsimme käytettäväksi React Nativen ja minun
+                vastuullani projektissa oli frontend yhdessä tiimimme toisten
+                kehittäjien kanssa sekä olin vastuussa myös testaamisesta.
+              </p>
+              <h4>Käytettyjä teknologioita ja menetelmiä:</h4>
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>React Native</li>
+                <li>Android Studio</li>
+                <li>Scrum</li>
+                <li>Git</li>
+              </ul>
+            </div>
           </div>
           <img
             class="projectLogo"
             src="img/ct_logo.png"
-            alt="Havainnekuva Cash Tracker säästönäkymästä."
+            alt="Cash Tracker logo."
           />
         </article>
         <article class="reverse">
           <div class="text">
             <h4>Asiakasprojekti</h4>
-            <h3>Portfoliosivut</h3>
-            <p class="blackbox">
-              Asiakasprojekti, jossa tein taiteilijan portfoliosivut. Tarkoitus
-              oli luoda minimalistiset sivut, jotka kuitenkin tuovat
-              mahdollisimman hyvin esiin taiteilijan teokset. Tässä linkki
-              sivuille
-              <a href="https://www.samisakari.com/" target="_blank"
-                >Sami Sakari.</a
-              >
-            </p>
-            <h4>Käytettyjä teknologioita ja menetelmiä:</h4>
-            <ul>
-              <li>WordPress</li>
-              <li>Elementor</li>
-              <li>Yoast SEO</li>
-            </ul>
+            <a href="https://www.samisakari.com/">
+              <h3>Portfoliosivut</h3>
+            </a>
+            <div class="blackbox">
+              <p>
+                Asiakasprojekti, jossa tein taiteilijan portfoliosivut.
+                Tarkoitus oli luoda minimalistiset sivut, jotka kuitenkin tuovat
+                mahdollisimman hyvin esiin taiteilijan teokset. Sivut
+                toteutettiin käyttäen Wordpressiä ja rakennettiin Elementor
+                pluginin avulla. Tästä
+                <a href="https://www.samisakari.com/" target="_blank">
+                  linkistä
+                </a>
+                pääsee katsomaan lopputulosta.
+              </p>
+              <h4>Käytettyjä teknologioita ja menetelmiä:</h4>
+              <ul>
+                <li>WordPress</li>
+                <li>Elementor</li>
+                <li>Yoast SEO</li>
+              </ul>
+            </div>
           </div>
           <img
             class="projectLogo"
@@ -153,7 +164,7 @@
     <div class="gradient"></div>
 
     <footer>
-      <h2>Olli Mikkonen &middot; Opiskelija</h2>
+      <h2>Olli Mikkonen &middot; Tietojenkäsittelyn opiskelija</h2>
       <ul>
         <li>
           <a href="https://www.linkedin.com/in/mikkonenolli/" target="_blank"
