--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <li>
           <a href="https://github.com/OlliMikkonen" target="_blank">
             <span class="fab fa-github-square" aria-hidden="true"></span>
-            <span class="sr-only">Github</span>
+            <span class="sr-only">GitHub</span>
           </a>
         </li>
         <li>
@@ -102,7 +102,7 @@
         <li>
           <a href="https://github.com/OlliMikkonen" target="_blank">
             <span class="fab fa-github-square" aria-hidden="true"></span>
-            <span class="sr-only">Github</span>
+            <span class="sr-only">GitHub</span>
           </a>
         </li>
         <li>
