--- a/cashtracker.html
+++ b/cashtracker.html
@@ -41,7 +41,7 @@
         <li>
           <a href="https://github.com/OlliMikkonen" target="_blank">
             <span class="fab fa-github-square" aria-hidden="true"></span>
-            <span class="sr-only">Github</span>
+            <span class="sr-only">GitHub</span>
           </a>
         </li>
         <li>
@@ -125,15 +125,15 @@
             <div class="blackbox">
               <p>
                 Projektia lähdettiin tekemään Scrumin mallin mukaan kahden viikon sprinteissä. 
-                Projektinhallintaan käytettiin Zen Hub työkalua 
-                ja versionhallinta suoritettiin Gitin avulla käyttäen Git Hubia.
+                Projektinhallintaan käytettiin ZenHub työkalua 
+                ja versionhallinta suoritettiin Gitin avulla käyttäen GitHubia.
               </p>
               <h4>Käytettyjä teknologioita ja menetelmiä:</h4>
               <ul>
                 <li>Scrum</li>
                 <li>Git</li>
-                <li>Git Hub</li>
-                <li>Zen Hub</li>
+                <li>GitHub</li>
+                <li>ZenHub</li>
               </ul>
             </div>
           </div>
@@ -186,7 +186,7 @@
         <li>
           <a href="https://github.com/OlliMikkonen" target="_blank">
             <span class="fab fa-github-square" aria-hidden="true"></span>
-            <span class="sr-only">Github</span>
+            <span class="sr-only">GitHub</span>
           </a>
         </li>
         <li>
