--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li>
           <a href="https://github.com/OlliMikkonen" target="_blank"
             ><span class="fab fa-github-square" aria-hidden="true"></span
-            ><span class="sr-only">Github</span></a
+            ><span class="sr-only">GitHub</span></a
           >
         </li>
         <li>
@@ -175,7 +175,7 @@
         <li>
           <a href="https://github.com/OlliMikkonen" target="_blank"
             ><span class="fab fa-github-square" aria-hidden="true"></span
-            ><span class="sr-only">Github</span></a
+            ><span class="sr-only">GitHub</span></a
           >
         </li>
         <li>
