--- a/about.html
+++ b/about.html
@@ -63,8 +63,8 @@
             <h3>Tietoa minusta</h3>
             <div class="blackbox">
               <p>
-                Olen 30-vuotias ja opiskelen tradenomiksi tietojenkäsittelyn
-                tutkinto-ohjelmassa. En ole vielä ammattilainen, mutta olen
+                Olen 30-vuotias alanvaihtaja Tampereelta ja opiskelen tradenomiksi tietojenkäsittelyn
+                tutkinto-ohjelmassa Jyväskylän ammattikorkeakoulussa. En ole vielä ammattilainen, mutta olen
                 nopea oppimaan ja motivoitunut kehittymään kohti IT-alan
                 ammattilaisuutta. Luonteeltani olen positiivinen ja rauhallinen
                 kaveri, joka osaa ottaa toiset huomioon. Toimin hyvin yhteen
