--- a/cashtracker.html
+++ b/cashtracker.html
@@ -139,7 +139,7 @@
           </div>
           <img
             class="projectLogo"
-            src="img/GitHub-Mark-Light-120px-plus.png"
+            src="img/gitlogo.png"
             alt="Git Hub logo."
           />
         </article>
@@ -172,8 +172,6 @@
       </section>
     </div>
     <div class="gradient"></div>
-    <input type="image" src="img/angle-up-solid.svg" onclick="topFunction()" id="myBtn"></input>
-    <script src="topFunction.js"></script>
     <footer>
       <h2>Olli Mikkonen &middot; Tietojenkäsittelyn opiskelija</h2>
       <ul>
