--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         Opiskelen ohjelmistokehitystä tietojenkäsittelyn tutkinto-ohjelmassa
       </h2>
       <p>
-        Olen laajasti kiinnostunut niin web kuin myös mobiilikehityksestä,
+        Olen laajasti kiinnostunut niin web- kuin mobiilikehityksestä,
         kiinnostunut oppimaan lisää frontend ja backendkehitystä ja myös
         ohjelmistotestaus kiinnostaa.
       </p>
