Ansioluettelon Linkki päivitetty

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         </li>
         <li>
           <a
-            href="https://www.dropbox.com/s/1yx0ay8o86e56e2/ollimikkonen_cv.png?dl=0"
+            href="https://www.dropbox.com/s/e52503nwlcjqegk/ollimikkonen_cv.pdf?dl=0"
             target="_blank"
             class="button"
             >Ansioluettelo</a
